[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["RustUse Contributors"]
edition = "2024"
homepage = "https://rustuse.org"
license = "MIT OR Apache-2.0"
publish = false
readme = "README.md"
repository = "https://github.com/RustUse/use-constants"
rust-version = "1.95.0"
version = "0.1.1"

[workspace.dependencies]
use-astronomical-constants = { version = "0.1.1", path = "crates/use-astronomical-constants" }
use-chemical-constants = { version = "0.1.1", path = "crates/use-chemical-constants" }
use-computing-constants = { version = "0.1.1", path = "crates/use-computing-constants" }
use-earth-constants = { version = "0.1.1", path = "crates/use-earth-constants" }
use-constants = { version = "0.1.1", path = "crates/use-constants" }
use-math-constants = { version = "0.1.1", path = "crates/use-math-constants" }
use-physical-constants = { version = "0.1.1", path = "crates/use-physical-constants" }

[workspace.metadata.rustuse.release]
publish = false
versioning = "lockstep-0.x"
first-publish-candidates = [
	"use-math-constants",
	"use-physical-constants",
	"use-chemical-constants",
	"use-computing-constants",
	"use-astronomical-constants",
	"use-earth-constants",
	"use-constants",
]

[workspace.lints.rust]
unsafe_code = "forbid"
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
expect_used = "warn"
multiple_crate_versions = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
todo = "deny"
unimplemented = "deny"
unwrap_used = "warn"
