[package]
name = "use-astronomical-constants"
description = "Reusable astronomical constants for RustUse"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/use-astronomical-constants"
keywords = ["constants", "astronomy", "distance", "science"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
