[package]
name = "use-chemical-constants"
description = "Reusable chemical and thermodynamic constants for RustUse"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/use-chemical-constants"
keywords = ["constants", "chemistry", "thermodynamics", "science"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
