[package]
name = "use-computing-constants"
description = "Reusable computing constants for RustUse"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/use-computing-constants"
keywords = ["constants", "computing", "bytes", "storage"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
