[package]
name = "use-earth-constants"
description = "Reusable Earth and WGS84 constants for RustUse"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-earth-constants"
keywords = ["constants", "earth", "wgs84", "geodesy"]
categories = ["science", "mathematics"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
