[package]
name = "use-math-constants"
description = "Reusable mathematical constants for RustUse"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/use-math-constants"
keywords = ["constants", "math", "pi", "tau"]
categories = ["mathematics", "science"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
